--- a/html/login.html
+++ b/html/login.html
@@ -1,18 +1,21 @@
 <html>
 <head>
-    <title>Login page</title>
+    <title>Annisa Nurul - Login page</title>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/login.css">
 
     
 <body>
     
-    <center><div class="header2"><a href="../html/home.html"><h1 style="color: white;">NEWS WEBSITE</b></h1 s></a></div></center>
-    <br>
-    <div class="file">
-        <a href="file:///D:/Q">Home</a>
-        <a href="file:///D:/Quis/login.html">login</a>
-        <a href="file:///D:/Quis/about1.html">About</a>
-        <a href="file:///D:/Quis/contak.html">Contact us</a>
+    <center><div class="header1"><h1>NEWS WEBSITE</h1>
+	</div>
+		<div class="header">
+		<a href="../html/home.html" class="btn">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html" class="btn">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html" class="btn">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html" class="btn">Contact us</a>
+		</div></center>
     <br>
     <br>
     <div class="loginbox">
