--- a/html/news3.html
+++ b/html/news3.html
@@ -29,8 +29,8 @@
 
 The piece, a token of friendship between the two sides, is a native Canadian Inuit artwork in the form of a Musk Ox sculpture made by Inuit artist Kellypalik Etidlooie. He is an active Canadian native artist whose creations have been displayed at various locations and venues in North America.</p>
 
-Thanking the Government of Canada for the artwork, Secretary-General Lim said, ‘the sculpture symbolises the solid relations between ASEAN and Canada that began in 1977 and has contributed positively to ASEAN’s integration agenda.” He affirmed that art is an effective catalyst to enhance intercultural dialogue and boost exchange of opportunities that will benefit both Canada and ASEAN.
-
+<p>Thanking the Government of Canada for the artwork, Secretary-General Lim said, ‘the sculpture symbolises the solid relations between ASEAN and Canada that began in 1977 and has contributed positively to ASEAN’s integration agenda.” He affirmed that art is an effective catalyst to enhance intercultural dialogue and boost exchange of opportunities that will benefit both Canada and ASEAN.
+</p>
 <p>On her part, Ambassador Kelly said, “the Musk Ox sculpture reflects the artist’s deep connection to Canada’s beautiful Arctic land and its landscape, flora and fauna as well as their lasting influence on their community.”  She added that the artwork is a symbolism that reflects the values to which Canada holds in its longstanding relations and commitment to its cooperation with ASEAN.</p>
 
 <p>“It symbolises our respect to the diversity across communities in Canada and I am pleased to deliver this artwork as a new addition to the ASEAN Secretariat’s new gallery, a place where public can learn both culture and history,” Ambassador Kelly highlighted.
