--- a/html/home.html
+++ b/html/home.html
@@ -6,9 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/home.css">
-	<style type="text/css">
-	
-	</style>
+
 </head>
 <body>
 	<center><div class="header1"><h1>NEWS WEBSITE</h1>
@@ -78,8 +76,12 @@
 		<a href="../html/news2.html"><button class="btn_style">Read more</button></a>
 		<br><br><br>
 		
-		
-	
+	</div>
+	<div class="footer">
+		<a href="https://www.wikipedia.org/">Wikipedia</a>
+		<a href="https://www.google.com/">Google</a>
+		<a href="https://www.bbc.com/">BBC</a>
+		<a href="https://www.twitter.com/">Twitter</a>
 	</div>
 </body>
 </html>
