--- a/html/news3.html
+++ b/html/news3.html
@@ -41,10 +41,10 @@ Present at the handover event were the Deputy Secretary-General of ASEAN for Cor
     </div>
 	</div>
 	<div class="footer">
-		<a href="wikipedia.com">Wikipedia</a>
-		<a href="google.com">Google</a>
-		<a href="bbc.com">BBC</a>
-		<a href="twitter.com">Twitter</a>
+		<a href="https://www.wikipedia.org/">Wikipedia</a>
+		<a href="https://www.google.com/">Google</a>
+		<a href="https://www.bbc.com/">BBC</a>
+		<a href="https://www.twitter.com/">Twitter</a>
 	</div>
 </body>
 </html>
